tests/models/struct/named/u64/fail/max_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_length = 2)]
    value: u64,
}
fn main() {}
